--- a/frontendjs/src/assets/scss/structure/_topbar.scss
+++ b/frontendjs/src/assets/scss/structure/_topbar.scss
@@ -22,6 +22,7 @@
 }
 
 .navbar-header {
+    background-color: #ffa502;//untuk backgrund navbar
     display: flex;
     -ms-flex-pack: justify;
     justify-content: space-between;
