--- a/frontendjs/src/pages/Print/PrintRekapBiaya/PrintRekapBiaya.scss
+++ b/frontendjs/src/pages/Print/PrintRekapBiaya/PrintRekapBiaya.scss
@@ -107,4 +107,31 @@
             }
         }
     }
+    .table-data-total{
+        width: 100%;
+        font-size: 12px;
+        text-align: center;
+        tbody{
+            border-bottom: 1px solid black;
+            tr{
+                width: 100%;
+                display: flex;
+                &:last-child{
+                    margin-bottom: 7px
+                };
+                th{
+                    margin: 0;
+                    width: 70%;
+                    text-align: right;
+                    font-size: 9px;
+                };
+                td{
+                    margin: 0;
+                    width: 70%;
+                    text-align: right;
+                    font-size: 9px;
+                }
+            }
+        }
+    }
 }
