--- a/frontendjs/src/pages/Bayar/Bayar.scss
+++ b/frontendjs/src/pages/Bayar/Bayar.scss
@@ -4,21 +4,10 @@
         z-index: 500;
     }
 
-    .table-payment{
-        width: 60%;
-        thead{
-            border-bottom: 1px solid #E0E0E0;
-            th{
-                font-weight: 400;
-                padding: 10px 0;
-                text-align: left !important;
-            }
-            th:last-child{
-                text-align: right !important;
-            }
-        }
-
+    .table-bayar{
+        width: calc(100%);
         tbody{
+
             tr{
                 td{
                     padding: 10px 0;
@@ -30,12 +19,12 @@
                 }
             };
 
-            tr:last-child{
-                td{
-                    font-weight: 600;
-                }
-            }
-        }
+        };
+        .total-tagihan{
+            border-top: 1px solid #E0E0E0;
+            
+        };
+
     }
     
 }
