--- a/frontendjs/src/pages/VerifikasiPelayanan/VerifikasiPelayanan.scss
+++ b/frontendjs/src/pages/VerifikasiPelayanan/VerifikasiPelayanan.scss
@@ -6,6 +6,7 @@
 
     .table-payment{
         width: 60%;
+        height: fit-content;
         thead{
             border-bottom: 1px solid #E0E0E0;
             th{
