--- a/frontendjs/src/pages/Bayar/Bayar.scss
+++ b/frontendjs/src/pages/Bayar/Bayar.scss
@@ -26,5 +26,30 @@
         };
 
     }
+
+
     
+}
+
+.template-bukti-bayar-print{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    .judul-template{
+        font-size: 14px;
+        font-weight: 600;
+        margin-bottom: 10px;
+        text-align: center;
+    }
+
+
+    table{
+        tr{
+            td{
+                font-size: 11px;
+                font-weight: 400;
+                
+            }
+        }
+    }
 }
