--- a/frontendjs/src/pages/Print/PrintHasilLaboratorium/PrintHasilLaboratorium.scss
+++ b/frontendjs/src/pages/Print/PrintHasilLaboratorium/PrintHasilLaboratorium.scss
@@ -36,4 +36,66 @@
             }
         }
     };
+    .table-data-umum{
+        width: 100%;
+        font-size: 12px;
+        text-align: center;
+        tbody{
+            border-bottom: 1px solid black;
+
+            tr{
+                width: 100%;
+                display: flex;
+                &:last-child{
+                    margin-bottom: 7px
+                };
+                td{
+                    display: flex;
+                    width: 50%;
+                    p{
+                        font-size: 9px;
+                        margin: 0;
+                    }
+                    .t-data-name{
+                        margin: 0;
+                        width: 40%;
+                        font-weight: bold;
+                        text-align: left
+                    };
+                    t-data-data{
+                        margin: 0;
+                        width: 60%;
+                        text-align: left;
+                    }
+                }
+            }
+        }
+    };
+    .table-data-hasil{
+        width: 100%;
+        font-size: 10px;
+        text-align: center;
+        tbody{
+            border-bottom: 1px solid black;
+            tr{
+                width: 100%;
+                display: flex;
+                &:last-child{
+                    margin-bottom: 7px
+                };
+                th{
+                    margin: 0;
+                    width: 60%;
+                    text-align: left;
+                    font-size: 9px;
+                };
+                td{
+                    margin: 0;
+                    width: 40%;
+                    text-align: right;
+                    font-size: 9px;
+                }
+            }
+        }
+    }
 }
