--- a/frontendjs/src/pages/Print/PrintHasilLaboratorium/PrintHasilLaboratorium.scss
+++ b/frontendjs/src/pages/Print/PrintHasilLaboratorium/PrintHasilLaboratorium.scss
@@ -74,28 +74,28 @@
     .table-data-hasil{
         width: 100%;
         font-size: 10px;
-        text-align: center;
+        text-align: left;
         tbody{
             border-bottom: 1px solid black;
-            tr{
-                width: 100%;
-                display: flex;
-                &:last-child{
-                    margin-bottom: 7px
-                };
-                th{
-                    margin: 0;
-                    width: 60%;
-                    text-align: left;
-                    font-size: 9px;
-                };
-                td{
-                    margin: 0;
-                    width: 40%;
-                    text-align: right;
-                    font-size: 9px;
-                }
-            }
+            // tr{
+            //     width: 100%;
+            //     display: flex;
+            //     &:last-child{
+            //         margin-bottom: 7px
+            //     };
+            //     th{
+            //         margin: 0;
+            //         width: 60%;
+            //         text-align: left;
+            //         font-size: 9px;
+            //     };
+            //     td{
+            //         margin: 0;
+            //         width: 40%;
+            //         text-align: right;
+            //         font-size: 9px;
+            //     }
+            // }
         }
     }
 }
