--- a/frontendjs/src/pages/Print/PrintExpertiseRadiologi/PrintExpertiseRadiologi.scss
+++ b/frontendjs/src/pages/Print/PrintExpertiseRadiologi/PrintExpertiseRadiologi.scss
@@ -97,5 +97,46 @@
             //     }
             // }
         }
+    };
+    .table-data-footer{
+        width: 100%;
+        font-size: 12px;
+        text-align: center;
+        tbody{
+            border-top: 1px solid black;
+
+            tr{
+                width: 100%;
+                display: flex;
+                &:last-child{
+                    margin-bottom: 7px
+                };
+                td{
+                    display: flex;
+                    width: 50%;
+                    p{
+                        font-size: 9px;
+                        margin: 0;
+                    }
+                    .t-data-name{
+                        margin: 0;
+                        width: 40%;
+                        font-weight: bold;
+                        text-align: left
+                    };
+                    t-data-data{
+                        margin: 0;
+                        width: 60%;
+                        text-align: left;
+                    }
+                }
+            }
+        }
+    };
+    .data-footer{
+        width: 100%;
+        font-size: 10px;
+        text-align: center;
+        border-top: 1px solid black;
     }
 }
