--- a/frontendjs/src/pages/Authentication/LoginBased.scss
+++ b/frontendjs/src/pages/Authentication/LoginBased.scss
@@ -11,7 +11,7 @@
     }
 
     .background-login-based {
-        width: calc(100% - 300px);
+        width: calc(100% - 500px);
         height: 100%;
         position: relative;
         @media screen and (max-width: 768px) {
@@ -37,7 +37,7 @@
     }
 
     .login-based-core {
-        width: 300px;
+        width: 500px;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -46,6 +46,19 @@
         justify-content: center;
         @media screen and (max-width: 768px) {
             width: 100%;
+        }
+
+        .logo-snb {
+            width: 300px;
+            height: 200px;
+            height: auto;
+            margin-bottom: 50px;
+            margin-top: -100px;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
         }
 
         .btn-pass {
