--- a/frontendjs/src/pages/Viewer/Viewer.scss
+++ b/frontendjs/src/pages/Viewer/Viewer.scss
@@ -15,22 +15,29 @@
         background-color: #e67e22;
 
         .gbr-header {
-            width: 150px;
-            height: 70px;
+            width: 300px;
+            height: 95px;
             object-fit: contain;
+            margin-top: 25px;
+            margin-left: 20px;
         }
 
         .kontainer-waktu {
             display: flex;
             flex-direction: column;
-            align-items: right;
+            align-items: flex-end;
             font-size: 36px;
             font-weight: 700;
+            margin-right: 10px;
+            margin-top: 5px;
 
             .jam-berjalan {
                 margin: 0;
                 font-size: 36px;
                 margin-bottom: 5px;
+                margin-top: 10px;
+                margin-right: 10px;
+                margin: 0;
             }
 
             .tgl-berjalan {
@@ -122,6 +129,11 @@
         display: flex;
         background-color: #e67e22;
         width: 100%;
+        margin: 0;
         height: 60px;
+        font-size: 35px;
+        overflow: hidden;
+        text-overflow: clip;
+        white-space: nowrap;
     }
 }
