--- a/daftarmandiri/src/Components/FlatpickrDM/FlatpickrDM.scss
+++ b/daftarmandiri/src/Components/FlatpickrDM/FlatpickrDM.scss
@@ -1,11 +1,14 @@
 .kontainer-flatpickr {
     width: 100%;
-    height: 56px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
     &:hover {
         cursor: pointer;
     }
     .fc-flatpickr {
         border: 1px solid #564405;
+        height: 56px;
 
         &:focus {
             outline: none;
