--- a/daftarmandiri/src/pages/Login/Login.scss
+++ b/daftarmandiri/src/pages/Login/Login.scss
@@ -6,23 +6,16 @@
     flex-direction: column;
     position: relative;
 
-    .kontainer-header-login {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: calc(100%);
-        padding: 16px 24px;
+    .header-login {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        height: 112px;
-        opacity: 100%;
         align-items: center;
-        transition: all 500ms ease-in-out;
-
+        position: relative;
+        width: 100%;
+        height: 112px;
         .kontainer-progress-bar {
             width: 30%;
-            height: 100%;
+            height: 80%;
             position: relative;
 
             .progress-bar {
@@ -60,63 +53,49 @@
         }
     }
 
-    .kontainer-isi-login {
-        height: fit-content;
-        border-radius: 20px 20px 0 0;
-        background-color: #faf6e7;
+    .pilihan-pasien {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 28px;
+        background-color: #dec15c;
+        border-radius: 10px;
+        position: relative;
 
-        padding: 30px;
-        width: calc(100%);
-        height: fit-content;
-        position: absolute;
-        left: 0;
-        transition: all 500ms ease-in-out;
-        min-height: calc(100% - 112px);
-
-        .pilihan-pasien {
-            display: flex;
-            flex-direction: row;
-            margin-bottom: 28px;
-            background-color: #dec15c;
+        .kontainer-bg {
+            position: absolute;
+            top: 4px;
+            left: 8px;
+            width: calc((100% / 2) - 16px);
+            height: calc(100% - 10px);
+            background-color: #e8d58f;
             border-radius: 10px;
-            position: relative;
-
-            .kontainer-bg {
-                position: absolute;
-                top: 4px;
-                left: 8px;
-                width: calc((100% / 2) - 16px);
-                height: calc(100% - 10px);
-                background-color: #e8d58f;
-                border-radius: 10px;
-                z-index: 1;
-                transition: all 200ms ease-in-out;
-            }
-
-            .btn-pasien {
-                width: calc((100% / 2) - 16px);
-                height: 52px;
-                padding: 15px;
-                font-size: 14px;
-                font-weight: 600;
-                color: #faf6e7;
-                border: none;
-                background-color: #00000000;
-                z-index: 2;
-                margin-left: 8px;
-                transition: all 200ms ease-in-out;
-            }
+            z-index: 1;
+            transition: all 200ms ease-in-out;
         }
 
-        .kontainer-konten {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        .btn-pasien {
+            width: calc((100% / 2) - 16px);
+            height: 52px;
+            padding: 15px;
+            font-size: 14px;
+            font-weight: 600;
+            color: #faf6e7;
+            border: none;
+            background-color: #00000000;
+            z-index: 2;
+            margin-left: 8px;
+            transition: all 200ms ease-in-out;
+        }
+    }
 
-            .btn-login {
-                width: 100%;
-            }
+    .kontainer-konten {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .btn-login {
+            width: 100%;
         }
     }
 
