--- a/daftarmandiri/src/pages/JadwalDokter/JadwalDokter.scss
+++ b/daftarmandiri/src/pages/JadwalDokter/JadwalDokter.scss
@@ -12,7 +12,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: calc(100% - (46px * 2));
+            width: calc(100%);
             background-color: #cda30b;
             border-radius: 5px;
             padding: 7px;
@@ -43,19 +43,51 @@
         }
     }
 
-    .jadwal-dokter {
+    .opsi-bottom {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 52px;
+        background-color: #cda30b;
+        align-items: center;
+
+        .opsi {
+            width: 100%;
+            height: 40px;
+            margin: 0;
+            text-align: center;
+            line-height: 40px;
+            font-size: 14px;
+            font-weight: 400;
+            border-right: 1px solid #927408;
+            &:last-child {
+                border-right: none;
+            }
+        }
+    }
+}
+
+.jadwal-dokter-komponen {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+
+    .isi-jadwal-dokter {
         display: flex;
         flex-direction: column;
-        margin-top: 15px;
+        background-color: #e8d58f;
+        border-radius: 15px;
+        padding: 8px;
 
-        .isi-jadwal-dokter {
+        .dokter-jabar {
             margin-bottom: 15px;
-            background-color: #e8d58f;
-            border-radius: 15px;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            padding: 8px;
+            border-bottom: 1px solid #927408;
 
             img {
                 width: 48px;
@@ -70,14 +102,68 @@
                 .nama {
                     margin: 0;
                     font-weight: 500;
-                    font-size: 12px;
-                    margin-bottom: 7px;
+                    font-size: 13px;
+                    margin-bottom: 2px;
                 }
-                .jadwal {
+                .poli-spesialisasi {
                     margin: 0;
-                    font-size: 12px;
+                    font-weight: 400;
+                    font-size: 11px;
                 }
             }
         }
+        .isi-jadwal {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-bottom: 2px;
+
+            .jadwal {
+                margin: 0;
+                font-size: 11px;
+            }
+
+            .jam-jadwal {
+                display: flex;
+                flex-direction: column;
+
+                p {
+                    margin-bottom: 3px;
+                    font-size: 11px;
+                }
+            }
+        }
+    }
+}
+
+.back-komponen-dm {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+
+    .tbl-back {
+        width: 30px;
+        height: 30px;
+        border: none;
+        padding: 0;
+        background-color: #00000000;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    p {
+        margin: 0;
+        color: #08080d;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        width: calc(100% - 20px);
+        text-align: center;
     }
 }
