--- a/daftarmandiri/src/pages/JadwalDokter/JadwalDokter.scss
+++ b/daftarmandiri/src/pages/JadwalDokter/JadwalDokter.scss
@@ -74,6 +74,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 15px;
+    width: 100%;
 
     .isi-jadwal-dokter {
         display: flex;
