--- a/daftarmandiri/src/pages/Home/HomePage.scss
+++ b/daftarmandiri/src/pages/Home/HomePage.scss
@@ -14,6 +14,12 @@
             height: fit-content;
             justify-content: space-between;
 
+            .nama-pasien {
+                margin: 0;
+                font-size: 15px;
+                font-weight: 500;
+            }
+
             .tbl-masuk {
                 display: flex;
                 flex-direction: row;
@@ -58,6 +64,7 @@
 
                 p {
                     font-size: 11px;
+                    min-height: 33px;
                     font-weight: 600;
                     color: #fff;
                     margin-top: 10px;
