--- a/daftarmandiri/src/pages/JadwalDokter/JadwalDokter.scss
+++ b/daftarmandiri/src/pages/JadwalDokter/JadwalDokter.scss
@@ -82,6 +82,7 @@
         background-color: #e8d58f;
         border-radius: 15px;
         padding: 8px;
+        margin-bottom: 20px;
 
         .dokter-jabar {
             margin-bottom: 15px;
