--- a/frontendjs/src/pages/Viewer/Viewer.scss
+++ b/frontendjs/src/pages/Viewer/Viewer.scss
@@ -96,7 +96,7 @@
 
         .loket-group {
             display: flex;
-            overflow: hidden;
+            width: 100vw;
             .loket-available {
                 display: flex;
                 flex-direction: column;
