--- a/daftarmandiri/src/Components/InputDM/InputDM.scss
+++ b/daftarmandiri/src/Components/InputDM/InputDM.scss
@@ -17,4 +17,10 @@
             outline: 1px solid #dec15c;
         }
     }
+
+    .input-disabled {
+        background-color: hsl(0, 0%, 95%);
+        border-color: hsl(0, 0%, 90%);
+        color: hsl(0, 0%, 60%);
+    }
 }
