--- a/daftarmandiri/src/pages/AkunPage/AkunPage.scss
+++ b/daftarmandiri/src/pages/AkunPage/AkunPage.scss
@@ -14,6 +14,34 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+
+                .data-akun {
+                    width: 100%;
+                    margin-bottom: 15px;
+                    align-items: center;
+                    display: flex;
+                    flex-direction: column;
+                    .gbr-akun {
+                        width: 144px;
+                        height: 144px;
+                        border-radius: 50%;
+                        border: 1px solid #d7b53c;
+                        margin-bottom: 10px;
+                    }
+
+                    .nama-pengguna {
+                        font-size: 16px;
+                        font-weight: 500;
+                        margin-bottom: 5px;
+                    }
+
+                    .data {
+                        font-size: 14px;
+                        font-weight: 400;
+                        margin-bottom: 3px;
+                    }
+                }
+
                 .button-opsi {
                     width: 100%;
                     height: 48px;
