--- a/daftarmandiri/src/pages/Home/HomePage.scss
+++ b/daftarmandiri/src/pages/Home/HomePage.scss
@@ -39,6 +39,21 @@
         }
 
         .carousel-home {
+            .kontainer-image {
+                width: 100%;
+                padding-bottom: 50%;
+                position: relative;
+                overflow: hidden;
+                border-radius: 10px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                }
+            }
             margin-top: 20px;
         }
 
