sedikit tweak page berita

--- a/daftarmandiri/src/pages/BeritaPage/BeritaPage.scss
+++ b/daftarmandiri/src/pages/BeritaPage/BeritaPage.scss
@@ -7,6 +7,7 @@
     h1 {
         font-size: 20px;
         font-weight: 600;
+        margin-bottom: 20px;
     }
 
     .gbr-headline {
@@ -22,7 +23,7 @@
             font-weight: 600;
             color: #564405;
             margin-top: 10px;
-            text-align: center;
+            text-align: left;
         }
     }
 }
