--- a/daftarmandiri/src/pages/BeritaPage/BeritaPage.scss
+++ b/daftarmandiri/src/pages/BeritaPage/BeritaPage.scss
@@ -4,7 +4,7 @@
     align-items: center;
     width: 100%;
 
-    h1 {
+    h2 {
         font-size: 20px;
         font-weight: 600;
         margin-bottom: 20px;
@@ -14,7 +14,7 @@
         width: 100%;
     }
 
-    .konten {
+    .konten-berita {
         width: 100%;
         display: flex;
         flex-direction: column;
