--- a/daftarmandiri/src/pages/RiwayatPendaftaran/RiwayatPendaftaran.scss
+++ b/daftarmandiri/src/pages/RiwayatPendaftaran/RiwayatPendaftaran.scss
@@ -132,3 +132,24 @@
         }
     }
 }
+
+.modal-content {
+    .modal-batal-riwayat-pendaftaran {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+        h3 {
+            font-size: 16px;
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+        .button-group {
+            margin-top: 15px;
+            display: flex;
+            width: 100%;
+            align-items: center;
+            justify-content: space-between;
+        }
+    }
+}
