--- a/daftarmandiri/src/pages/AntreanOnlinePage/AntreanOnlinePage.scss
+++ b/daftarmandiri/src/pages/AntreanOnlinePage/AntreanOnlinePage.scss
@@ -15,6 +15,17 @@
             margin-bottom: 13px;
         }
 
+        .teks-belum-ada {
+            color: #715a06;
+            text-align: center;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+            margin-bottom: 3px;
+            text-align: center;
+        }
+
         .kontainer-antrean {
             display: flex;
             flex-direction: column;
