--- a/frontendjs/src/pages/ViewerPoli/ViewerPoli.scss
+++ b/frontendjs/src/pages/ViewerPoli/ViewerPoli.scss
@@ -48,72 +48,146 @@
         }
     }
 
-    .konten-viewer {
-        width: 100%;
+    .kontainer-konten {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
         height: calc(100% - 160px);
-
-        .antrean-aktif-video {
+        .konten-viewer {
+            width: 60%;
             display: flex;
-            flex-direction: row;
-            padding: 7px;
-            height: calc(100% - 220px);
-            .antrean-aktif {
+            flex-direction: column;
+            height: 100%;
+
+            .antrean-aktif-video {
                 display: flex;
-                flex-direction: column;
-                align-items: center;
-                width: 37%;
-                margin-right: 3%;
-                font-size: 35px;
-                justify-content: space-between;
-                width: 40%;
-                background-color: #eee7df;
-                border-radius: 25px;
+                flex-direction: row;
+                padding: 7px;
+                height: calc(100% - 220px);
+                .antrean-aktif {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 47%;
+                    margin-right: 3%;
+                    font-size: 35px;
+                    justify-content: space-between;
+                    background-color: #eee7df;
+                    border-radius: 25px;
 
-                .judul {
-                    font-size: 30px;
-                    font-weight: 700;
+                    .judul {
+                        font-size: 30px;
+                        font-weight: 700;
+                    }
+
+                    .nomor {
+                        font-size: 120px;
+                        font-weight: 800;
+                        text-align: center;
+                    }
+
+                    .loket {
+                        font-size: 30px;
+                        font-weight: 700;
+                    }
                 }
-
-                .nomor {
-                    font-size: 120px;
-                    font-weight: 800;
-                    text-align: center;
-                }
-
-                .loket {
-                    font-size: 30px;
-                    font-weight: 700;
+                .kontainer-video {
+                    background-color: #000000;
+                    border-radius: 25px;
+                    width: 60%;
                 }
             }
-            .kontainer-video {
-                background-color: #000000;
-                border-radius: 25px;
-                width: 60%;
+
+            .ruang-group {
+                display: flex;
+                width: 100%;
+                margin-top: 30px;
+                margin-left: 10px;
+                flex-wrap: wrap;
+
+                .ruang-available {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 47%;
+                    border-radius: 15px;
+                    margin-right: 3%;
+                    background-color: #eee7df;
+                    border-radius: 16px;
+                    overflow: hidden;
+                    min-height: 260px;
+                    justify-content: space-between;
+                    margin-bottom: 20px;
+
+                    .isi-konten {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        margin-top: 15px;
+
+                        p {
+                            text-align: center;
+                        }
+
+                        .nama-poliklinik {
+                            font-size: 18px;
+                            font-weight: 500;
+                        }
+                        .nama-dokter {
+                            font-size: 18px;
+                            font-style: italic;
+                        }
+                        .nomor-antrean {
+                            font-size: 46px;
+                            font-weight: 600;
+                            margin-bottom: 0;
+                        }
+                    }
+
+                    .nama-ruang {
+                        font-size: 25px;
+                        font-weight: 700;
+                        background: rgba(230, 126, 34, 0.8);
+                        width: 100%;
+                        text-align: center;
+                        margin-bottom: 0;
+                        padding: 10px;
+                    }
+                }
             }
         }
 
-        .ruang-group {
+        .terakhir-panggil {
             display: flex;
-            width: 100vw;
-            margin-top: 30px;
-            margin-left: 10px;
-            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
+            width: 40%;
+            height: 100%;
+            justify-content: center;
 
             .ruang-available {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                width: 30%;
+                width: 80%;
                 border-radius: 15px;
                 margin-right: 3%;
                 background-color: #eee7df;
                 border-radius: 16px;
                 overflow: hidden;
-                min-height: 260px;
+                min-height: 300px;
                 justify-content: space-between;
                 margin-bottom: 20px;
+                .nomor-terpanggil {
+                    font-size: 25px;
+                    font-weight: 700;
+                    background: rgba(230, 126, 34, 0.8);
+                    width: 100%;
+                    text-align: center;
+                    margin-bottom: 0;
+                    padding: 10px;
+                }
 
                 .isi-konten {
                     display: flex;
