--- a/frontendjs/src/pages/ViewerPoli/ViewerPoli.scss
+++ b/frontendjs/src/pages/ViewerPoli/ViewerPoli.scss
@@ -187,7 +187,7 @@
                 .nomor-terpanggil {
                     font-size: 25px;
                     font-weight: 700;
-                    background: rgba(230, 126, 34, 0.8);
+                    // background: rgba(230, 126, 34, 0.8);
                     width: 100%;
                     text-align: center;
                     margin-bottom: 0;
@@ -248,7 +248,7 @@
                 .nomor-terpanggil {
                     font-size: 20px;
                     font-weight: 700;
-                    background: rgba(230, 126, 34, 0.8);
+                    // background: rgba(230, 126, 34, 0.8);
                     width: 100%;
                     text-align: center;
                     margin-bottom: 0;
