--- a/frontendjs/src/pages/ViewerBed/ViewerBed.scss
+++ b/frontendjs/src/pages/ViewerBed/ViewerBed.scss
@@ -53,6 +53,7 @@
         flex-direction: column;
         width: 100%;
         height: calc(100% - 100px);
+        align-items: center;
 
         .judul-viewer-bed {
             margin-top: 15px;
@@ -62,6 +63,7 @@
             border-radius: 10px;
             background: #153e90;
             box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            width: calc(100% - 10px);
         }
 
         .kontainer-data {
@@ -69,6 +71,7 @@
             flex-direction: row;
             align-items: center;
             height: calc(100% - 90px);
+            width: calc(100% - 10px);
             .kontainer-tabel-informasi {
                 display: flex;
                 flex-direction: column;
@@ -123,6 +126,12 @@
                     .body-table {
                         width: 100%;
                         height: calc(100% - (100% / 11));
+                        overflow-y: scroll;
+                        -ms-overflow-style: none; /* IE and Edge */
+                        scrollbar-width: none; /* Firefox */
+                        &::-webkit-scrollbar {
+                            display: none;
+                        }
 
                         .bg-genap {
                             background-color: rgb(211, 211, 211);
@@ -202,6 +211,11 @@
                 width: 380px;
                 height: calc(100%);
                 overflow-y: scroll;
+                -ms-overflow-style: none; /* IE and Edge */
+                scrollbar-width: none; /* Firefox */
+                &::-webkit-scrollbar {
+                    display: none;
+                }
 
                 .kontainer-kelas {
                     display: flex;
