--- a/frontendjs/src/pages/ViewerBed/ViewerBed.scss
+++ b/frontendjs/src/pages/ViewerBed/ViewerBed.scss
@@ -136,22 +136,25 @@
                         .bg-genap {
                             background-color: rgb(211, 211, 211);
                         }
-                        .row-bed {
-                            height: calc(100% / 10);
-                            display: flex;
-                            padding: 5px;
+                        .batch-kontainer-data-kelas-table {
+                            height: calc(100vh - 320px);
 
-                            p {
-                                margin: 0;
-                            }
-                            .kontainer-data {
-                                &-ruangan {
+                            .row-bed {
+                                height: calc(100% / 10);
+                                display: flex;
+                                padding: 5px;
+
+                                p {
+                                    margin: 0;
+                                }
+                                .kontainer-data-ruangan {
                                     display: flex;
                                     align-items: center;
                                     height: 100%;
                                     width: 20%;
                                 }
-                                &-kelas-table {
+
+                                .kontainer-data-kelas-table {
                                     display: flex;
                                     align-items: center;
                                     height: 100%;
@@ -205,74 +208,69 @@
                 }
             }
             .kelas {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
                 width: 380px;
                 height: calc(100%);
-                overflow-y: scroll;
-                -ms-overflow-style: none; /* IE and Edge */
-                scrollbar-width: none; /* Firefox */
-                &::-webkit-scrollbar {
-                    display: none;
-                }
 
-                .kontainer-kelas {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    width: 100%;
-                    height: 22%;
-                    margin-bottom: 20px;
-
-                    .judul-kelas {
-                        color: #f5f6f7;
-                        width: 100%;
-                        background-color: #153e90;
-                        text-align: center;
-                        height: 30px;
-                        font-size: 20px;
-                        margin: 0;
-                        border-top-left-radius: 10px;
-                        border-top-right-radius: 10px;
-                    }
-
-                    .bed {
+                .kontainer-isi-kelas {
+                    height: calc(100vh - 200px);
+                    width: 380px;
+                    .kontainer-kelas {
                         display: flex;
-                        flex-direction: row;
+                        flex-direction: column;
                         align-items: center;
-                        height: calc(100% - 30px);
                         width: 100%;
+                        height: 22%;
+                        margin-bottom: 20px;
 
-                        .kontainer-bed {
-                            width: 50%;
-                            height: 100%;
-                            background-color: #187498;
-                            border-bottom-left-radius: 10px;
-                            .jumlah-bed {
-                                color: #fff;
-                                text-align: center;
-                                font-family: Poppins;
-                                font-size: 8vh;
-                                font-style: normal;
-                                font-weight: 500;
-                                line-height: normal;
-                            }
+                        .judul-kelas {
+                            color: #f5f6f7;
+                            width: 100%;
+                            background-color: #153e90;
+                            text-align: center;
+                            height: 30px;
+                            font-size: 20px;
+                            margin: 0;
+                            border-top-left-radius: 10px;
+                            border-top-right-radius: 10px;
                         }
 
-                        .kontainer-sisa {
-                            width: 50%;
-                            height: 100%;
-                            background-color: #36ae7c;
-                            border-bottom-right-radius: 10px;
-                            .tersisa {
-                                color: #fff;
-                                text-align: center;
-                                font-family: Poppins;
-                                font-size: 8vh;
-                                font-style: normal;
-                                font-weight: 500;
-                                line-height: normal;
+                        .bed {
+                            display: flex;
+                            flex-direction: row;
+                            align-items: center;
+                            height: calc(100% - 30px);
+                            width: 100%;
+
+                            .kontainer-bed {
+                                width: 50%;
+                                height: 100%;
+                                background-color: #187498;
+                                border-bottom-left-radius: 10px;
+                                .jumlah-bed {
+                                    color: #fff;
+                                    text-align: center;
+                                    font-family: Poppins;
+                                    font-size: 8vh;
+                                    font-style: normal;
+                                    font-weight: 500;
+                                    line-height: normal;
+                                }
+                            }
+
+                            .kontainer-sisa {
+                                width: 50%;
+                                height: 100%;
+                                background-color: #36ae7c;
+                                border-bottom-right-radius: 10px;
+                                .tersisa {
+                                    color: #fff;
+                                    text-align: center;
+                                    font-family: Poppins;
+                                    font-size: 8vh;
+                                    font-style: normal;
+                                    font-weight: 500;
+                                    line-height: normal;
+                                }
                             }
                         }
                     }
