--- a/frontendjs/src/pages/ViewerBed/ViewerBed.scss
+++ b/frontendjs/src/pages/ViewerBed/ViewerBed.scss
@@ -57,11 +57,11 @@
 
         .judul-viewer-bed {
             margin-top: 15px;
-            color: #fff;
+            color: #000000;
             text-align: center;
             padding: 10px;
             border-radius: 10px;
-            background: #153e90;
+            background: #e67e22;
             box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
             width: calc(100% - 10px);
         }
