--- a/frontendjs/src/pages/ViewerOperasi/ViewerOperasi.scss
+++ b/frontendjs/src/pages/ViewerOperasi/ViewerOperasi.scss
@@ -97,6 +97,7 @@
                         margin-bottom: 5px;
                         font-weight: 500;
                         margin-left: 10px;
+                        text-align: left;
                     }
                 }
                 .kontainer-description {
