--- a/frontendjs/src/pages/DasborPegawai/DasborPegawai.scss
+++ b/frontendjs/src/pages/DasborPegawai/DasborPegawai.scss
@@ -6,4 +6,9 @@
         margin-left: 0;
         margin-right: 0;
     }
+
+    .gbr-widget {
+        width: 38px;
+        height: 38px;
+    }
 }
