reset password done

--- a/daftarmandiri/src/pages/Login/Login.scss
+++ b/daftarmandiri/src/pages/Login/Login.scss
@@ -95,6 +95,11 @@
         .btn-login {
             width: 100%;
         }
+
+        .lupa-password {
+            margin-top: -15px;
+            margin-bottom: 15px;
+        }
     }
 
     .input-group-login {
