--- a/kios-k/src/components/HeaderKiosk/HeaderKiosk.scss
+++ b/kios-k/src/components/HeaderKiosk/HeaderKiosk.scss
@@ -5,8 +5,7 @@
     align-items: center;
     width: 100%;
     height: 75px;
-    opacity: 0.7;
-    background: #f7efe8;
+    background-color: #f7efe8d2;
     margin-bottom: 20px;
 
     .gbr-health-techs {
