--- a/kios-k/src/App.scss
+++ b/kios-k/src/App.scss
@@ -113,7 +113,7 @@ body {
 
 /* Clear and delete buttons */
 .keypad button.clear {
-    background-color: #ff6347; /* Red color for clear button */
+    background-color: #dc3545; /* Red color for clear button */
     color: #fff;
 }
 
