--- a/frontendjs/src/pages/Viewer/Viewer.scss
+++ b/frontendjs/src/pages/Viewer/Viewer.scss
@@ -4,7 +4,11 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: #fbd3b7;
+    background-image: url(./background.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
     .header-viewer {
         width: 100%;
@@ -28,9 +32,11 @@
                 margin-left: 20px;
                 &:last-child {
                     margin-left: -50px;
+                    margin-top: 4px;
+                    height: 88%;
                 }
                 &:first-child {
-                    margin-left: 150px;
+                    margin-left: 310px;
                 }
             }
         }
@@ -66,7 +72,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        height: calc(100% - 160px);
+        height: calc(100% - 100px);
 
         .antrean-aktif-video {
             display: flex;
