--- a/frontendjs/src/Components/Skala/Skala.scss
+++ b/frontendjs/src/Components/Skala/Skala.scss
@@ -5,7 +5,7 @@
     position: relative;
     width: 100%;
     height: 25px;
-    margin-top: 45px;
+    margin-top: 0;
 
     .kontainer-isi-skala {
         position: relative;
