--- a/frontendjs/src/assets/scss/config/modern/_theme-light.scss
+++ b/frontendjs/src/assets/scss/config/modern/_theme-light.scss
@@ -3,11 +3,11 @@
 :root{
 
     //vertical light
-  --#{$prefix}vertical-menu-bg:                      #{$white};
-  --#{$prefix}vertical-menu-item-color:              #{darken($gray-600, 10%)};
+  --#{$prefix}vertical-menu-bg:                      #{$gray-200};
+  --#{$prefix}vertical-menu-item-color:              #{darken($gray-900, 10%)};
   --#{$prefix}vertical-menu-item-hover-color:        #{$primary};
   --#{$prefix}vertical-menu-item-active-color:       #{$primary};
-  --#{$prefix}vertical-menu-sub-item-color:          #{darken($gray-600, 4%)};
+  --#{$prefix}vertical-menu-sub-item-color:          #{darken($gray-900, 4%)};
   --#{$prefix}vertical-menu-sub-item-hover-color:    #{$primary};
   --#{$prefix}vertical-menu-sub-item-active-color:   #{$primary};
   --#{$prefix}vertical-menu-title-color:             #919da9;
