--- a/frontendjs/src/assets/scss/config/modern/_variables.scss
+++ b/frontendjs/src/assets/scss/config/modern/_variables.scss
@@ -187,7 +187,7 @@ $auth-bg-cover: linear-gradient(-45deg, $primary 50%, $success);
 // scss-docs-start gray-color-variables
 $white: #fff;
 $gray-100: #f3f6f9;
-$gray-200: #eff2f7;
+$gray-200: #f4f4f6;
 $gray-300: #e9ebec;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
@@ -226,6 +226,7 @@ $teal: #02a8b5;
 $cyan: #58caea;
 $bluehealthtech: #3a6cf9;
 $greenhealthtech: #009825;
+$yellowhealthtech: #f7b84b;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
